Time: 0 ms (100%), Space: 42.6 MB (82.52%) - LeetHub